--- a/Main.html
+++ b/Main.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <title>Main</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
-      <link href="https://fonts.googleapis.com/css2?family=Oleo+Script:wght@400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
   </head>
 
@@ -16,7 +15,7 @@
         <a href="./Main.html"><span class="logo">Web</span><span class="logo black-logo">Studio</span></a>
         <ul class="list">
           <li><a href="#Studio" class="link head-link">Студия</a></li>
-          <li><a href="#Portfolio" class="link head-link">Портфолио</a></li>
+          <li><a href="./Studio.html" class="link head-link">Портфолио</a></li>
           <li><a href="#Team" class="link head-link">Контакты</a></li>
         </ul>
         </nav>
