--- a/Main.html
+++ b/Main.html
@@ -34,7 +34,7 @@
       <section class="hero">
         <!-- Заголовок блок герой-->
         <h1 >Эффективные решения для вашего бизнеса</h1>
-        <a href="" class="hero-button" type="button">Заказать услугу</a>
+        <a href="" class="hero-button">Заказать услугу</a>
       </section>
       <section id="Studio">
         <h2 hidden>Студия</h2>
