--- a/Studio.html
+++ b/Studio.html
@@ -30,11 +30,11 @@
             </header>
 <div>
     <ul class="list">
-    <li><a href="" class="list list-button" type="button">Все</a></li>
-    <li><a href="" class="list list-button" type="button">Веб-сайты</a></li>
-    <li><a href="" class="list list-button" type="button">Приложения</a></li>
-    <li><a href="" class="list list-button" type="button">Дизайн</a></li>
-    <li><a href="" class="list list-button" type="button">Маркетинг</a></li>
+    <li><a href=""class="list list-button" >Все</a></li>
+    <li><a href=""class="list list-button" >Веб-сайты</a></li>
+    <li><a href=""class="list list-button" >Приложения</a></li>
+    <li><a href=""class="list list-button" >Дизайн</a></li>
+    <li><a href=""class="list list-button" >Маркетинг</a></li>
     </ul>
 </div>
 
@@ -43,49 +43,49 @@
     <ul class="list">
         <li>
             <img src="./images-studio/tehnokryak.jpg" alt="Технокряк">
-                <h2>Технокряк</h2>
-                <p>Веб-сайт</p>
+                <h2 class="item">Технокряк</h2>
+                <p class="item-description">Веб-сайт</p>
         </li>
         <li>
             <img src="./images-studio/poster-new-orlean.jpg" alt="Постер New Orlean vs Golden Star">
-                <h2>Постер New Orlean vs Golden Star</h2>
-                <p>Дизайн</p>
+                <h2 class="item">Постер New Orlean vs Golden Star</h2>
+                <p class="item-description">Дизайн</p>
         </li>
         <li>
             <img src="./images-studio/restaurant-sea-food.jpg" alt="Ресторан Seafood">
-            <h2>Ресторан Seafood</h2>
-            <p>Приложение</p>
+            <h2 class="item">Ресторан Seafood</h2>
+            <p class="item-description">Приложение</p>
         </li>
         <li>
             <img src="./images-studio/project-prime.jpg" alt="Проект Prime">
-            <h2>Проект Prime</h2>
-                    <p>Маркетинг</p>
+            <h2 class="item">Проект Prime</h2>
+                    <p class="item-description">Маркетинг</p>
                
         </li>
         <li>
             <img src="./images-studio/project-boxes.jpg" alt="Проект Boxes">
-                <h2>Проект Boxes</h2>
-                    <p>Приложение</p>
+                <h2 class="item">Проект Boxes</h2>
+                    <p class="item-description">Приложение</p>
         </li>
         <li>
             <img src="./images-studio/inspiration-has-no-borders.jpg" alt="Inspiration has no Borders">
-                <h2>Inspiration has no Borders</h2>
-                    <p>Веб-сайт</p>
+                <h2 class="item">Inspiration has no Borders</h2>
+                    <p class="item-description">Веб-сайт</p>
         </li>
         <li>
             <img src="./images-studio/limited-edition.jpg" alt="Издание Limited Edition">
-                <h2>Издание Limited Edition</h2>
-                    <p>Дизайн</p>
+                <h2 class="item">Издание Limited Edition</h2>
+                    <p class="item-description">Дизайн</p>
         </li>
         <li>
             <img src="./images-studio/project-lab.jpg" alt="Проект LAB">
-                <h2>Проект LAB</h2>
-                    <p>Маркетинг</p>
+                <h2 class="item">Проект LAB</h2>
+                    <p class="item-description">Маркетинг</p>
         </li>
         <li>
             <img src="./images-studio/growing-business.jpg" alt="Growing Business">
-            <h2>Growing Business</h2>
-            <p>Приложение</p>
+            <h2 class="item">Growing Business</h2>
+            <p class="item-description">Приложение</p>
         </li>
     </ul>
 </section>
