--- a/Studio.html
+++ b/Studio.html
@@ -12,7 +12,7 @@
         <body>
             <header>
                 <nav>
-                    <a href="./Studio.html"><span class="logo">Web</span><span class="logo black-logo">Studio</span></a>
+                    <a href="./index.html"><span class="logo">Web</span><span class="logo black-logo">Studio</span></a>
                     <ul class="list">
                         <li><a href="" class="link head-link">Студия</a></li>
                         <li><a href="" class="link head-link">Портфолио</a></li>
