--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <header>
       <nav>
-        <a href="./Main.html"><span class="logo">Web</span><span class="logo black-logo">Studio</span></a>
+        <a href="./index.html"><span class="logo">Web</span><span class="logo black-logo">Studio</span></a>
         <ul class="list">
           <li><a href="#Studio" class="link head-link">Студия</a></li>
           <li><a href="./Studio.html" class="link head-link">Портфолио</a></li>
