--- a/Studio.html
+++ b/Studio.html
@@ -14,9 +14,9 @@
                 <nav>
                     <a href="./index.html"><span class="logo">Web</span><span class="logo black-logo">Studio</span></a>
                     <ul class="list">
-                        <li><a href="" class="link head-link">Студия</a></li>
-                        <li><a href="" class="link head-link">Портфолио</a></li>
-                        <li><a href="" class="link head-link">Контакты</a></li>
+                        <li><a href="" class="link link-primary">Студия</a></li>
+                        <li><a href="" class="link link-secondary">Портфолио</a></li>
+                        <li><a href="" class="link link-primary">Контакты</a></li>
                     </ul>
                 </nav>
                 <ul class="list">
@@ -42,48 +42,48 @@
     <h1 hidden>Примеры работ</h1>
     <ul class="list">
         <li>
-            <img src="./images-studio/tehnokryak.jpg" alt="Технокряк">
+            <img src="./images-studio/tehnokryak.jpg" alt="Технокряк" width="370px">
                 <h2 class="item">Технокряк</h2>
                 <p class="item-description">Веб-сайт</p>
         </li>
         <li>
-            <img src="./images-studio/poster-new-orlean.jpg" alt="Постер New Orlean vs Golden Star">
+            <img src="./images-studio/poster-new-orlean.jpg" alt="Постер New Orlean vs Golden Star" width="370px">
                 <h2 class="item">Постер New Orlean vs Golden Star</h2>
                 <p class="item-description">Дизайн</p>
         </li>
         <li>
-            <img src="./images-studio/restaurant-sea-food.jpg" alt="Ресторан Seafood">
+            <img src="./images-studio/restaurant-sea-food.jpg" alt="Ресторан Seafood" width="370px">
             <h2 class="item">Ресторан Seafood</h2>
             <p class="item-description">Приложение</p>
         </li>
         <li>
-            <img src="./images-studio/project-prime.jpg" alt="Проект Prime">
+            <img src="./images-studio/project-prime.jpg" alt="Проект Prime" width="370px">
             <h2 class="item">Проект Prime</h2>
                     <p class="item-description">Маркетинг</p>
                
         </li>
         <li>
-            <img src="./images-studio/project-boxes.jpg" alt="Проект Boxes">
+            <img src="./images-studio/project-boxes.jpg" alt="Проект Boxes" width="370px">
                 <h2 class="item">Проект Boxes</h2>
                     <p class="item-description">Приложение</p>
         </li>
         <li>
-            <img src="./images-studio/inspiration-has-no-borders.jpg" alt="Inspiration has no Borders">
+            <img src="./images-studio/inspiration-has-no-borders.jpg" alt="Inspiration has no Borders" width="370px">
                 <h2 class="item">Inspiration has no Borders</h2>
                     <p class="item-description">Веб-сайт</p>
         </li>
         <li>
-            <img src="./images-studio/limited-edition.jpg" alt="Издание Limited Edition">
+            <img src="./images-studio/limited-edition.jpg" alt="Издание Limited Edition" width="370px">
                 <h2 class="item">Издание Limited Edition</h2>
                     <p class="item-description">Дизайн</p>
         </li>
         <li>
-            <img src="./images-studio/project-lab.jpg" alt="Проект LAB">
+            <img src="./images-studio/project-lab.jpg" alt="Проект LAB" width="370px">
                 <h2 class="item">Проект LAB</h2>
                     <p class="item-description">Маркетинг</p>
         </li>
         <li>
-            <img src="./images-studio/growing-business.jpg" alt="Growing Business">
+            <img src="./images-studio/growing-business.jpg" alt="Growing Business" width="370px">
             <h2 class="item">Growing Business</h2>
             <p class="item-description">Приложение</p>
         </li>
